// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> should add shadow and gutters 1`] = `
.c0 {
  position: relative;
  font-size: 24px;
  line-height: 1.25;
  font-weight: 600;
  text-align: left;
  box-shadow: 0px 26px 18px -23px rgba(0,0,0,0.12);
  padding: 16px;
}

@media screen and (min-width:480px) {
  .c0 {
    padding: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding: 24px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    padding: 32px;
    padding-bottom: 16px;
  }
}

<div
  className="c0"
/>
`;

exports[`<ActionBar /> should omit shadow and gutters 1`] = `
.c0 {
  position: relative;
  font-size: 24px;
  line-height: 1.25;
  font-weight: 600;
  text-align: left;
  box-shadow: none;
}

<div
  className="c0"
/>
`;

exports[`<BottomActionBar /> should add shadow and gutters 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  box-shadow: 0px -26px 18px -23px rgba(0,0,0,0.12);
  padding: 16px;
}

.c0 button {
  float: right;
  margin-left: 24px;
}

.c0 button:last-of-type {
  margin-left: 0;
}

@media screen and (min-width:480px) {
  .c0 {
    padding: 16px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    padding: 32px;
    padding-top: 24px;
  }
}

<div
  className="c0"
/>
`;

exports[`<BottomActionBar /> should omit shadow and gutters 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  box-shadow: none;
}

.c0 button {
  float: right;
  margin-left: 24px;
}

.c0 button:last-of-type {
  margin-left: 0;
}

<div
  className="c0"
/>
`;
